src/objects/ProjectAgreement__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>ProjectAgreementsAgreement</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fund_Project__c</fullName>
        <formula>HYPERLINK(&quot;/apex/ECO_ProjectFunding?AgreementId=&quot;
&amp;  Agreement__c 
&amp;&quot;&amp;ProjectId=&quot;
&amp;  Project__c 
,&quot;Fund Project&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fund Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>ProjectAgreementsProject</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Agreement</label>
    <nameField>
        <displayFormat>PA-{0}</displayFormat>
        <label>Project Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>